fix select box z-index and add margin bottom to grid

--- a/src/styles/components/forms/_select.scss
+++ b/src/styles/components/forms/_select.scss
@@ -19,6 +19,7 @@
 		position: absolute;
 		width: 100%;
 		background: $select-bg;
+		z-index: 2;
 
 		.ks-select-dropdown-input {
 			padding: rem($select-input-padding);
